src/test/deca/syntax/valid/created/include_suite1.deca
#include "include_suite2.deca"

class A{

}
