src/test/deca/syntax/invalid/created/include_circulaire_1.deca
#include "include_circulaire_2.deca"

class O{
}